# Phira-mp-plus

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HARDENING_REPORT.md  LICENSE  NOTICE  PHASE2_HARDENING_REPORT.md  PHASE3_WAL_REPORT.md  PMP14_PRODUCTION_COMPLIANCE_AUDIT.md  PMP15_PRODUCTION_COMPLIANCE_AUDIT.md  PMP16_PRODUCTION_COMPLIANCE_AUDIT.md  PMP19_VISION_ALIGNED_AUDIT_V2.md  PMP_BENCHMARK_REDESIGN_SPEC.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRDPARTY_LICENSES  about.toml  api.md  benchmark-real.md  configuration.md  deny.toml  docker-compose.yml  notice.hbs  phira-plugin.wit  rust-toolchain.toml  server_config.yml  wit_abi_contracts.rs
.github/workflows/: build.yml  bump-version.yml  clippy.yml  deb-release.yml  ppa-upload.yml  release.yml
Phira+ 提示词工程/: Phira-mp +.txt  md.txt  wit.txt
data/: welcome-config.json
debian/: changelog  control  files  recipe  rules
debian/source/: options
deploy/systemd/: phira-mp-plus.service
docs/: api.md  architecture-change-log.md  architecture-hardening.md  audit-report.md  benchmark-real.md  cli.md  configuration.md  functional-reliability-audit.md  guarantees.md  migrate-from-hsnphira.md  operations.md  plugin-config.md  plugin-dev.md  product.md  runtime-v2-actor-roadmap.md  runtime-v2.md  simulation.md  static-verification.md  web-monitor-integration.md  wit-abi.md
docs/api/: capability-table.md  plugin-api.md  ppb-contract.md
docs/archive/: HARDENING_REPORT.md
docs/development/: architecture.md  error-codes.en.md  error-codes.md  testing.md
docs/getting-started/: quick-start.md
docs/operations/: backup-restore.md  capacity-planning.md  config-schema.json  configuration-reference.md  incident-runbooks.md  troubleshooting.md  upgrade-rollback.md
docs/plugins/: examples.md  lifecycle.md  manifest.md  player-tracker.md  playtime-tracker.md  room-info-web-api.md  round-results.md  sdk-cookbook.md  welcome-plugin.md
docs/product/: compatibility-matrix.md  overview.en.md  overview.md
docs/security/: report.md  threat-model.md
phira-mp/: Cargo.toml
phira-mp-plus-sdk/: Cargo.toml
phira-mp-plus-sdk/src/: lib.rs
phira-mp-plus-server/: Cargo.toml
phira-mp-plus-server-api/: Cargo.toml
phira-mp-plus-server-api/src/: lib.rs
phira-mp-plus-server/locales/: en-US.ftl  zh-CN.ftl  zh-TW.ftl
phira-mp-plus-server/migrations/: 20260720000001_initial_schema.sql  20260721000001_initial_schema.sql
phira-mp-plus-server/src/: actor_runtime.rs  admin_command.rs  backup.rs  ban.rs  benchmark_report.rs  benchmark_snapshot.rs  cli.rs  cli_tui.rs  command_registry.rs  crypto.rs  db.rs  error.rs  event_bus.rs  extensions.rs  federation.rs  idle.rs  internal_hooks.rs  jsondb.rs  l10n.rs  lib.rs  logging.rs  main.rs  persistence_worker.rs  phira_client.rs  play_history.rs  plugin.rs  plugin_abi.rs  plugin_http.rs  plugin_tcp.rs  proxy_protocol.rs  rate_limiter.rs  rbac.rs  room.rs  room_actor.rs  round_store.rs  runtime_budget.rs  runtime_diagnostics.rs  runtime_plan.rs  server.rs  server_config.yml  (+18 more)
phira-mp-plus-server/src/benchmark/: command.rs  config.rs  environment.rs  metrics.rs  mock_phira.rs  mod.rs  presets.rs  profile.rs  report.rs  runner.rs
phira-mp-plus-server/src/benchmark/modes/: real.rs  simulation.rs
phira-mp-plus-server/src/benchmark/scenarios/: common.rs  connection.rs  database_write.rs  gameplay.rs  hot_room.rs  long_run.rs  mixed.rs  plugin_load.rs  reconnect.rs  room_lifecycle.rs  slow_consumer.rs  steady_state.rs
phira-mp-plus-server/src/cli/: dispatch.rs
phira-mp-plus-server/src/cli/commands/: admin.rs  benchmark.rs  benchmark_simulation.rs  broadcast.rs  mod.rs  plugin.rs  room.rs  runtime.rs  simulation.rs
phira-mp-plus-server/src/cli/commands/runtime/: actors.rs  budget.rs  commands.rs  cutover.rs  events.rs  mod.rs  persistence.rs  phira.rs  roadmap.rs  rooms.rs  schema.rs  status.rs
phira-mp-plus-server/src/cli/commands/simulation/: mod.rs  reports.rs  runner.rs  world.rs
phira-mp-plus-server/src/persistence/: admin.rs  benchmark.rs  diagnostics.rs  events.rs  high_frequency.rs  message.rs  mirror.rs  mod.rs  pipeline.rs  queries.rs  rounds.rs  schema.rs  simulation.rs  stats.rs  telemetry.rs  users.rs  wal.rs  worker.rs
phira-mp-plus-server/src/plugin_abi/: dto.rs  json.rs  mod.rs  plan.rs
phira-mp-plus-server/src/plugin_http/: router.rs  sse.rs  websocket.rs
phira-mp-plus-server/src/room_actor/: actor.rs  audit.rs  command.rs  context.rs  handler.rs  mailbox.rs  mod.rs  ops.rs  result.rs
phira-mp-plus-server/src/room_actor/ops/: control.rs  membership.rs  mod.rs  session.rs  settings.rs  telemetry.rs
phira-mp-plus-server/src/server/: accept.rs  benchmark.rs  config.rs  disconnect.rs  events.rs  init.rs  mod.rs  orig.rs  query.rs  rooms.rs  snapshot.rs  state.rs
phira-mp-plus-server/src/telemetry/: batcher.rs  cutover.rs  mod.rs  tests.rs
phira-mp-plus-server/tests/: admin_command_contracts.rs  cli_command_contracts.rs  command_surface_contracts.rs  docs_contracts.rs  persistence_contracts.rs  phira_http_contracts.rs  room_state_machine_tests.rs  runtime_v2_contracts.rs  simulation_contracts.rs  sse_tests.rs  telemetry_cutover_contracts.rs  test-plugin.component.wasm  wasm_api_tests.rs  wasm_lifecycle_tests.rs  wit_abi_contracts.rs
phira-mp-plus-server/tests/test-plugin/: Cargo.toml  Makefile
phira-mp-plus-server/tests/test-plugin/src/: lib.rs
phira-mp-plus-server/wit/: phira-mp-plus.wit
phira-mp-plus-server/wit/phira/: mpplus.wit
phira-mp/phira-mp-common/: Cargo.toml
phira-mp/phira-mp-macros/: Cargo.toml
phira-plugin-sdk/: Cargo.toml
phira-plugin-sdk/src/: lib.rs  prelude.rs
plugins/player-tracker/: Cargo.toml
plugins/playtime-tracker/: Cargo.toml
plugins/round-results/: Cargo.toml
plugins/round-results/src/: lib.rs
plugins/web-monitor/: Cargo.toml
plugins/web-monitor/src/: lib.rs
plugins/webapi-plugin/: Cargo.toml
plugins/webapi-plugin/src/: api.rs  lib.rs  sse.rs
scripts/: check-changed-rustfmt.sh  docgen.sh  sync-workspace-version.py
wit/: phira-plugin.wit
(+9 files in other folders)
