[workspace.package]
license = "AGPL-3.0"
edition = "2021"

[workspace]
members = [
    "phira-mp-plus-server",
    "phira-mp-plus-server-api",
    "phira-mp-plus-sdk",
    "plugins/webapi-plugin",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "net",
    "io-util",
    "time",
    "sync",
] }
tracing = "0.1.44"
uuid = "1.21.0"

[profile.release]
opt-level = 2
debug = 1

[profile.dev.package."*"]
opt-level = 2
