[workspace]
resolver = "2"
members = [
    "phira-mp-plus-server",
    "phira-mp-plus-server-api",
    "phira-plugin-sdk",
    "phira-mp/phira-mp-common",
    "phira-mp/phira-mp-macros",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
