[package]
name = "phira-mp-plus-sdk"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.21.0", features = ["v4"] }
chrono = "0.4.43"

[features]
default = []
