[package]
name = "phira-mp-plus-server"
version = "0.2.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.58", features = ["derive", "env"] }
crossterm = "0.28"
ratatui = "0.28"
fluent = "0.17.0"
once_cell = "1.21.3"
rand = "0.10.0"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { workspace = true, features = ["fs", "io-util", "io-std", "process", "signal"] }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unic-langid = { version = "0.9.6", features = ["macros"] }
unicode-width = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"], optional = true }
uuid = { workspace = true, features = ["v4"] }
wasmtime = { version = "30", features = ["component-model"], optional = true }

# HTTP/SSE 中央服务器（插件系统）
axum = { version = "0.8", default-features = false, features = [
    "tokio", "http1", "json", "macros", "original-uri", "matched-path", "query", "form", "ws",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"

phira-mp-common = { path = "../phira-mp/phira-mp-common" }
phira-mp-macros = { path = "../phira-mp/phira-mp-macros" }
phira-mp-plus-server-api = { path = "../phira-mp-plus-server-api" }
[features]
default = ["plugin-system", "postgres"]
plugin-system = ["dep:wasmtime"]
postgres = ["dep:sqlx"]
