[package]
name = "phira-mp-plus-server"
version = "0.4.770"
edition.workspace = true
license = "AGPL-3.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.58", features = ["derive", "env"] }
crossterm = "0.28"
ratatui = "0.28"
fluent = "0.17.0"
once_cell = "1.21.3"
rand = "0.10.0"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { workspace = true, features = ["v4"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { workspace = true, features = ["fs", "io-util", "io-std", "process", "signal", "net", "rt", "sync", "time"] }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
unic-langid = { version = "0.9.6", features = ["macros"] }
unicode-width = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid", "migrate"], optional = true }
wasmtime = { version = "36", features = ["component-model", "async"], optional = true }

# HTTP/SSE 中央服务器（插件系统）
axum = { version = "0.8", features = ["ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.4" }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
futures = "0.3"

phira-mp-common = { path = "../phira-mp/phira-mp-common" }
phira-mp-macros = { path = "../phira-mp/phira-mp-macros" }
phira-mp-plus-server-api = { path = "../phira-mp-plus-server-api" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"

[features]
default = ["postgres", "wit-bindgen"]
plugin-system = ["dep:wasmtime"]
# WIT/component-model bindgen.  JSON bridge removed (MIGRATION_PHASE=2),
# so WIT bindings are now required for plugin support.
wit-bindgen = ["plugin-system"]
postgres = ["dep:sqlx"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("wit-bindgen"))'] }

[dev-dependencies]
