[package]
name = "phira-mp-plus-round-results"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
phira-mp-plus-server-api = { path = "../../phira-mp-plus-server-api" }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
