[package]
name = "phira-mp-plus-web-monitor"
version = "0.1.0"
edition.workspace = true

[dependencies]
phira-mp-plus-server-api = { path = "../../phira-mp-plus-server-api" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["ws", "json"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[lib]
crate-type = ["lib"]
