[package]
name = "phira-mp-plus-webapi"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
phira-mp-plus-server = { path = "../../phira-mp-plus-server" }
phira-mp-plus-sdk = { path = "../../phira-mp-plus-sdk" }
phira-mp-common = { path = "../../phira-mp/phira-mp-common" }

serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
